--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -1,6 +1,4 @@
-#main{
-  background-color: #cccccc;
-}
+
 
 #a {
   position: absolute;
@@ -21,3 +19,36 @@
   padding: 0;
   height:100px;
 }
+
+#hello-text{
+  position: relative;
+  float: left;
+  padding-top: 300px;
+}
+
+#text-2{
+  position: relative;
+  float: right;
+  padding-top: 300px;
+}
+
+
+#line {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid #000;
+    line-height: 0.1em;
+    margin: 10px 0 20px;
+}
+#line span {
+    background: #fff;
+    padding: 0 10px;
+}
+
+#about-text{
+    font-style: normal;
+    font-style: italic;
+    font-style: oblique;
+    font-family: "Comic Sans MS";
+}
+
